# player-controller

./: .gitattributes  .gitignore  404.html  Exodus.csproj  Exodus.csproj.old  Exodus.csproj.old.1  Exodus.csproj.old.2  Exodus.sln  PlayerControllerAddon.sln  README.md  export_presets.cfg  icon.png.import  index.html  mkdocs.yml  project.godot  pyproject.toml  sitemap.xml
.github/workflows/: .asset-template.json.hb  asset-lib-update.yml  ci.yaml
Assets/Materials/Health/: CameraDistortion.tres  CameraVignette.tres
Assets/Materials/Prototyping/: DarkFloorMeterByMeter.tres  (+2 more)
Scenes/: CSGStairMaker3D.tscn  DevUtils.tscn  Prototyping.tscn  RichPresence.tscn  World.tscn  player.tscn
Scenes/Hills/: Hills_1.tscn  kenney-green-checkerboar-cc0.png.import
Scenes/examples/: Prototyping.tscn  World.tscn
Scripts/: DevUtils.cs  DevUtils.cs.uid  GameManager.cs  GameManager.cs.uid  LowGravityDome.cs
Scripts/Player/: CapsuleCollider.cs  Driver.cs  FieldOfView.cs  Gravity.cs  HealthSystem.cs  StairsSystem.cs
Shaders/: Decal.gdshader  Decal.gdshader.uid  ThresholdFilter.gdshader.uid  edge_cutter.gdshader  edge_cutter.gdshader.uid
addons/Stairs3D/: stairs_3d.gd.uid  stairs_3d_plugin.gd.uid
addons/player_controller/: PlayerController.tscn
addons/runtime_debug_tools/: icon.png.import
docs/: api-reference.md  index.md  mkdocs.yml  tutorial-1.md  tutorial-2.md  tutorial-3.md  tutorials.md  z-api-reference.md
search/: search_index.json
tutorial-1/: index.html
tutorial-2/: index.html
tutorial-3/: index.html
tutorials/: index.html
z-api-reference/: index.html
(+116 files in other folders)
