[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["GonnaFlyMethod <alex.husakou@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.6.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
